--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="fr">
   <head>
     <meta charset="utf-8" />
     <!-- Below are the links to the CSS sheet which helps style this page and the Google Fonts style sheet for the Roboto font. -->
     <!-- Voici les liens vers la feuille de style CSS qui aide à modifier l'apparence visuelle de cette page et la feuille de style Google Fonts pour la police Roboto. -->
-    <link rel="stylesheet" type="text/css" href="jsstyle.css">
+    <link rel="stylesheet" type="text/css" href="chad.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <title>Meaningful Title or Logo Goes Here</title>
+    <title>Chad Guénette, l'Homme, la Légende</title>
   </head>
   <body>
     <!-- The logo and menu are below. Don't touch the <div> and <nav> tags. -->
     <!-- Le logo et le menu sont ci-dessous. Ne touchez pas aux balises <div> et <nav>. -->
     <div class="top-bar">
-      <div class="logo">
-        <p>Meaningful Title or Logo Goes Here</p>
+      <div class="titrebleu">
+        <h1>Chad Guénette, l'Homme, la Légende</h1>
       </div>
       <nav class="top-menu">
         <ul>
-          <li><a class="current-page-link" href="index.html">Page 1</a></li>
-          <li><a href="page2.html">Page 2</a></li>
-          <li><a href="page3.html">Page 3</a></li>
+          <li><a class="current-page-link" href="Index.html">Index</a></li>
+          <li><a href="Biographie.html">Biographie</a></li>
+          <li><a href="Carrière.html">Carrière</a></li>
         </ul>
       </nav>
-    </div>
+    </div> 
     <!-- The actual page content starts here. Don't touch the <div> tags. -->
     <!-- Le contenu de la page commence ici. Ne touchez pas aux balises <div>. -->
     <div class="page-content">
@@ -30,7 +30,45 @@
     <!-- START Your content should be between this line... -->
     <!-- DÉBUT Votre contenu devrait être entre cette ligne... -->
 
-    Votre contenu vient ici. Your content goes here.
+    <figure> 
+    <img src="images/chadmoto.jpeg" alt="Chad Guénette debout à côté de sa moto rouge."style="width: 500px;px;height:600px;"> 
+    <div class="legendenavy">
+    <figcaption> Chad Guénette à côté de sa moto</figcaption>
+    </div>
+    <div class="creditphoto">
+    <figcaption>Crédit: Chad Guénette</figcaption>
+    </div>
+     </figure>
+    <html lang="fr">
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Document</title>
+    </head>
+    <body>
+      <div class="soustitre">
+        <p> Bienvenue dans la vie de Chad Guénette </p>
+      </div>
+      <div class="texte"> 
+      <br>
+      Chad Guénette est né le 6 septembre 2003, à l'hôpital de Mont-Laurier. Son père Stéphan et sa mère Geneviève sont très fiers de ce qu'il accompli dans sa vie.<br>
+      <br> Ses passions sont bien évidemment les sports. Les voici:
+      <ul>
+        <li> Hockey</li>
+        <li> Ultimate Frisbee </li>
+        <li> Formule 1</li>
+        <li> Tennis</li>
+        <li> Golf</li>
+        <li> Tous les sports à part le soccer</li>
+      </ul>
+      <p> Voici où Chad regarde la <a href="https://f1tv.formula1.com/"> F1</a></p>
+      <p>Mais également la musique de type dubstep. Chad adore les festivals et son festival préférée dans le monde est <a href="https://www.lostlandsfestival.com/">Lost Lands</a> en Ohio. Chad a eu la chance d'y aller en 2023<br>
+        <br> Voici le Trailer de 2023<br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6n6t-wBGcqI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <br> </p>
+      </div>
+    </body>
+    </html>
 
     <!-- ...and this line. END -->
     <!-- ...et cette ligne. FIN -->
@@ -40,7 +78,7 @@
       <div class="footer-content">
     <!-- The footer starts here. -->
     <!-- Le crédit de bas de page commence ici. -->
-        <p>©2021 Your Name | <a href="mailto:username@uottawa.ca">username@uottawa.ca</a></p>
+        <p>©2023 Chad Guénette | <a href="mailto:cguen022@uottawa.ca">cguen022@uottawa.ca</a></p>
       </div>
     </div>
   </body>
